# EscolaDeVerao2026

aula1/: Embeddings.ipynb  TinyStoriesTokenizer.ipynb  slides.md
aula2/: classificacao_llm.ipynb  pyproject.toml  slides.md  tweets_utf8.csv
aula3/: pyproject.toml  slides.md  treinamento_unsloth_dpo.ipynb  treinamento_unsloth_multiturn.ipynb
aula4/: treinamento_unsloth_toldbr.ipynb  treinamento_unsloth_toldbr.py
