[project]
name = "treinando-llms"
version = "0.1.0"
description = "Aula de treinamento de LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "instructor>=1.7.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "mistralai>=1.5.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
